@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>software.amazon.lambda</groupId>
@@ -15,13 +15,13 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
-        <lambda.java.core>1.2.2</lambda.java.core>
-        <lambda.java.serialization>1.1.2</lambda.java.serialization>
-        <lambda.java.events>3.11.2</lambda.java.events>
+        <lambda.java.core>1.3.0</lambda.java.core>
+        <lambda.java.serialization>1.1.6</lambda.java.serialization>
+        <lambda.java.events>3.16.1</lambda.java.events>
         <maven.shade.version>3.5.0</maven.shade.version>
         <aspectj.plugin.version>1.13.1</aspectj.plugin.version>
         <maven.compiler.version>3.11.0</maven.compiler.version>
-        <aws.sdk.version>2.20.108</aws.sdk.version>
+        <aws.sdk.version>2.32.2</aws.sdk.version>
         <aspectj.version>1.9.20.1</aspectj.version>
     </properties>
 
@@ -112,6 +112,11 @@
                 <artifactId>aws-lambda-java-serialization</artifactId>
                 <version>${lambda.java.serialization}</version>
             </dependency>
+            <dependency>
+                <groupId>com.amazonaws</groupId>
+                <artifactId>aws-lambda-java-runtime-interface-client</artifactId>
+                <version>2.8.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -134,17 +139,18 @@
                             </goals>
                             <configuration>
                                 <transformers>
-                                    <transformer implementation="org.apache.logging.log4j.maven.plugins.shade.transformer.Log4j2PluginCacheFileTransformer"/>
+                                    <transformer
+                                        implementation="org.apache.logging.log4j.maven.plugins.shade.transformer.Log4j2PluginCacheFileTransformer" />
                                 </transformers>
                             </configuration>
                         </execution>
                     </executions>
                     <dependencies>
-                      <dependency>
-                        <groupId>org.apache.logging.log4j</groupId>
-                        <artifactId>log4j-transform-maven-shade-plugin-extensions</artifactId>
-                        <version>0.1.0</version>
-                       </dependency>
+                        <dependency>
+                            <groupId>org.apache.logging.log4j</groupId>
+                            <artifactId>log4j-transform-maven-shade-plugin-extensions</artifactId>
+                            <version>0.1.0</version>
+                        </dependency>
                     </dependencies>
                 </plugin>
                 <plugin>
@@ -184,6 +190,29 @@
                             <version>${aspectj.version}</version>
                         </dependency>
                     </dependencies>
+                </plugin>
+                <plugin>
+                    <groupId>org.graalvm.buildtools</groupId>
+                    <artifactId>native-maven-plugin</artifactId>
+                    <version>0.10.6</version>
+                    <extensions>true</extensions>
+                    <executions>
+                        <execution>
+                            <id>build-native</id>
+                            <goals>
+                                <goal>build</goal>
+                            </goals>
+                            <phase>package</phase>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <imageName>handler</imageName>
+                        <mainClass>com.amazonaws.services.lambda.runtime.api.client.AWSLambda</mainClass>
+                        <buildArgs>
+                            <arg>--enable-url-protocols=http</arg>
+                            <arg>--add-opens java.base/java.util=ALL-UNNAMED</arg>
+                        </buildArgs>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
